@@ -47,6 +47,9 @@ ECL 0.9g
 
  - The random number generator assumed 32-bit integers.
 
+ - ext:run-program looks into *standard-input/output* and *error-output* for handle
+   duplicatio also under Win32.
+
 * ANSI compatibility:
 
  - Several functions that signaled type-errors did not set the right values
